--- a/projects/oxygen-ui/src/lib/styles/_flex.scss
+++ b/projects/oxygen-ui/src/lib/styles/_flex.scss
@@ -80,6 +80,15 @@ $flex-properties: (
   .ox-flex#{if($breakpoint, "-#{$breakpoint}", "")}-fill {
     flex: 1 1 auto !important;
   }
+  
+  // Display flex shortcuts
+  .ox-flex#{if($breakpoint, "-#{$breakpoint}", "")} {
+    display: flex !important;
+  }
+  
+  .ox-inline-flex#{if($breakpoint, "-#{$breakpoint}", "")} {
+    display: inline-flex !important;
+  }
 }
 
 // Base utilities
